# core

./: .dockerignore  .env.example  .gitignore  .gitmodules  .oxlintrc.json  .tool-versions  Brewfile  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.appview  Dockerfile.ingester  Dockerfile.media-proxy  Dockerfile.quickslice  Dockerfile.storybook  LICENSE-APACHE  README.md  capacitor.config.ts  cloudbuild.yaml  deny.toml  docker-compose.quickslice.yml  justfile  package-lock.json  package.json  process-compose.devenv.yaml  process-compose.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
crates/atproto-blob-resolver/: Cargo.toml
crates/atproto-blob-resolver/src/: error.rs  lib.rs  resolver.rs  types.rs
crates/atproto-identity/: Cargo.toml
crates/atproto-identity/src/: did.rs  lib.rs  resolver.rs  types.rs
crates/atproto-oauth-pg-store/: Cargo.toml  README.md
crates/atproto-oauth-pg-store/migrations/: 0001_oauth_tables.sql
crates/atproto-oauth-pg-store/src/: lib.rs
crates/axum-admin/: Cargo.toml
crates/axum-admin/examples/: serve.rs
crates/axum-admin/src/: lib.rs  postgres.rs
crates/backfill-occurrences/: Cargo.toml
crates/backfill-occurrences/src/: main.rs
crates/cell-csr-index-py/: Cargo.toml  README.md  pyproject.toml
crates/cell-csr-index-py/src/: lib.rs
crates/cell-csr-index-py/tests/: test_smoke.py
crates/file-blob-cache/: Cargo.toml
crates/file-blob-cache/src/: cache.rs  lib.rs  types.rs
crates/gbif-api/: Cargo.toml
crates/gbif-api/src/: client.rs  error.rs  lib.rs  types.rs
crates/jetstream-client/: Cargo.toml
crates/jetstream-client/src/: error.rs  event.rs  lib.rs  subscription.rs
crates/nominatim-client/: Cargo.toml
crates/nominatim-client/src/: client.rs  continents.rs  error.rs  lib.rs  types.rs
crates/observing-appview/: Cargo.toml  Dockerfile
crates/observing-appview/src/: ai_agent.rs  atproto.rs  audio_id_client.rs  auth.rs  config.rs  constants.rs  enrichment.rs  error.rs  gbif_upstream.rs  main.rs  middleware.rs  oauth_store.rs  quickslice_convert.rs  resolver.rs  responses.rs  species_id_client.rs  state.rs  subscriptions.rs  taxonomy_client.rs  validation.rs
crates/observing-audio-id/: Cargo.toml
crates/observing-audio-id/src/: embeddings.rs  error.rs  geo_index.rs  main.rs  model.rs  preprocessing.rs  server.rs  types.rs
crates/observing-backfill/: Cargo.toml
crates/observing-backfill/src/: main.rs
crates/observing-bootstrap/: Cargo.toml
crates/observing-bootstrap/src/: db.rs  http.rs  job.rs  lib.rs
crates/observing-collections/: Cargo.toml
crates/observing-collections/src/: lib.rs
crates/observing-db/: Cargo.toml
crates/observing-db/migrations/: 20240101000000_initial.sql  20240201000000_notifications.sql  20260227000000_drop_confidence.sql  20260319000000_profile_feed_indexes.sql  20260409000000_drop_identification_remarks.sql  20260414000000_drop_subject_index.sql  20260416000000_drop_dead_locality_columns.sql  20260418000000_appview_reader_grants.sql  20260419000000_table_schemas.sql  20260420000000_notification_reads.sql  20260421000000_ingester_writer_role.sql  20260422000000_appview_runtime_rename.sql  20260423000000_ingester_runtime_rename.sql  20260424000000_create_runtime_base_role.sql  20260425000000_cloudsqlsuperuser_schema_usage.sql  20260425000001_reassign_table_ownership.sql  20260426000000_drop_vernacular_name.sql  20260428000000_drop_occurrence_observers.sql  20260428000001_grant_runtime_roles.sql  20260505000000_drop_is_agreement.sql  20260505100000_taxa_cache.sql  20260506000000_community_ids_via_taxa.sql  20260509100000_tap_schema.sql  20260509120000_failed_records.sql  20260516000000_user_preferences.sql  20260521000000_add_identification_model_fields.sql  20260522000000_optional_occurrence_location.sql  20260602000000_drop_occurrence_ref_fks.sql  20260602010000_occurrence_created_at_authoring_time.sql  20260605000000_add_basemap_preference.sql  20260606000000_occurrence_organism_quantity.sql  20260606120000_occurrences_created_at_index.sql  20260615000000_occurrence_event_date_raw.sql  20260615010000_occurrence_event_date_bounds.sql
crates/observing-db/src/: admin.rs  comments.rs  community_ids.rs  discover.rs  failed_records.rs  feeds.rs  identifications.rs  interactions.rs  lib.rs  likes.rs  migrate.rs  notifications.rs  oauth.rs  observers.rs  occurrences.rs  private_data.rs  processing.rs  quality.rs  repos.rs  taxa.rs  taxonomy_resolver.rs  types.rs  user_preferences.rs
crates/observing-ingester/: Cargo.toml  Dockerfile  README.md
crates/observing-ingester/.sqlx/: query-3a7240443ff3dc7d86a416f653b721e9bbb8ceaad20cb35b30bbb618bb8da86a.json  query-4de6245835a942f7f792be90071519b3d4e0077c4cf4ce3392d56743036d0a49.json  query-50c5854a2591714b3bba1ffcef5f6631eca12ba7de31d7d6397323384fd6ee74.json  query-85a846cea136f7cea8b49408609074a85f9a7dc06dc74927addd50631139c15d.json  query-bc08c5a66cbbed9834a460ed7b6b4471ad64fa416dcd24931717be33b5c73bb4.json  query-e71f2126079df649760de0eb6e841c2c25c46c07995d68521c63906d6031fb88.json
crates/observing-ingester/src/: database.rs  error.rs  firehose.rs  lib.rs  main.rs  media_resolver.rs  server.rs  spike_log.rs  types.rs
crates/observing-lexicons/: Cargo.toml
crates/observing-lexicons/src/: app_bsky.rs  bio_lexicons.rs  builder_types.rs  com_atproto.rs  ing_observ.rs  lib.rs  org_rwell.rs
crates/observing-media-proxy/: Cargo.toml  Dockerfile  README.md
crates/observing-media-proxy/src/: error.rs  lib.rs  main.rs  server.rs  types.rs
crates/observing-migrate/: Cargo.toml
crates/observing-migrate/src/: main.rs
crates/observing-records/: Cargo.toml
crates/observing-resolve-taxa/: Cargo.toml
crates/observing-resolve-taxa/src/: main.rs  taxon_uri.rs
crates/observing-species-id/: Cargo.toml
crates/observing-task-runner/: Cargo.toml
crates/observing-taxonomy/: Cargo.toml  Dockerfile
crates/observing-taxonomy-gbif/: Cargo.toml
crates/quickslice-client/: Cargo.toml
perch-models/: pyproject.toml
perch-models/perch_models/: __init__.py  cli.py  download.py  labels.py  schema.py  verify.py
(+827 files in other folders)
