[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
ts-rs = { version = "12", features = ["chrono-impl", "serde-json-impl"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-stackdriver = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# URL utilities
urlencoding = "2"
url = "2"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["connect"] }

# Testing
tempfile = "3"

[profile.release]
debug = true
