[package]
name = "atproto-blob-resolver"
version = "0.1.0"
edition = "2021"
description = "AT Protocol DID resolution and PDS blob fetching"
license = "AGPL-3.0-only"

[dependencies]
# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# URL encoding
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
