[package]
name = "atproto-blob-resolver"
version = "0.1.0"
edition = "2021"
description = "AT Protocol DID resolution and PDS blob fetching"
license = "AGPL-3.0-only"

[dependencies]
# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
