[package]
name = "atproto-blob-resolver"
version = "0.1.0"
edition = "2021"
description = "AT Protocol DID resolution and PDS blob fetching"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP client
reqwest = { workspace = true }

# DID newtype
atproto-identity = { path = "../atproto-identity" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
