[package]
name = "atproto-identity"
version = "0.1.0"
edition = "2021"
description = "AT Protocol identity resolution and profile caching"
license = "MIT OR Apache-2.0"

[dependencies]
# AT Protocol types (validated DID)
jacquard-common = "0.12"

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Caching
moka = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true }
