[package]
name = "backfill-occurrences"
version = "0.1.0"
edition = "2021"
description = "One-shot CLI that re-fetches occurrence records from their authoring PDS and re-runs the upsert, to backfill newly-extracted columns (organismQuantity/organismQuantityType)"
license = "MIT OR Apache-2.0"

[dependencies]
# `processing::occurrence_from_json` (feature-gated) + the occurrences upsert.
observing-db = { path = "../observing-db", features = ["processing"] }
# DID -> PDS resolution and `com.atproto.repo.getRecord`, shared with the ingester.
atproto-blob-resolver = { path = "../atproto-blob-resolver" }
atproto-identity = { path = "../atproto-identity" }
at-uri-parser = { path = "../at-uri-parser" }

tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
