[package]
name = "file-blob-cache"
version = "0.1.0"
edition = "2021"
description = "File-based blob cache with TTL expiration and LRU eviction"
license = "AGPL-3.0-only"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "sync"] }
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
