[package]
name = "file-blob-cache"
version = "0.1.0"
edition = "2021"
description = "File-based blob cache with TTL expiration and LRU eviction"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { workspace = true }
hex = "0.4"
serde = { workspace = true }
sha2 = "0.11"
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
