[package]
name = "gbif-api"
version = "0.1.0"
edition = "2021"
description = "Rust client for the GBIF (Global Biodiversity Information Facility) API"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# URL encoding
urlencoding = { workspace = true }

# Async runtime (for timeout)
tokio = { workspace = true }
