[package]
name = "jetstream-client"
version = "0.1.0"
edition = "2021"
description = "AT Protocol Jetstream WebSocket client"
license = "AGPL-3.0-only"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["time", "sync"] }

# WebSocket
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
