[package]
name = "nominatim-client"
version = "0.1.0"
edition = "2021"
description = "Nominatim reverse geocoding client with rate limiting and caching"
license = "AGPL-3.0-only"

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Logging
tracing = "0.1"

# Async
tokio = { version = "1", features = ["sync", "time"] }

# Static initialization
lazy_static = "1"
