[package]
name = "nominatim-client"
version = "0.1.0"
edition = "2021"
description = "Nominatim reverse geocoding client with rate limiting and caching"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }

# Caching
moka = { workspace = true }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true }

# Static initialization
lazy_static = "1"
