[package]
name = "observing-appview"
version = "0.1.0"
edition = "2021"
description = "Unified REST API and web server for Observ.ing"
license = "AGPL-3.0-only"

[dependencies]
# Internal crates
observing-db = { path = "../observing-db", features = ["processing"] }
observing-identity = { path = "../observing-identity" }
observing-geocoding = { path = "../observing-geocoding" }
observing-lexicons = { path = "../observing-lexicons" }

# AT Protocol types (for record construction)
jacquard-common = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }

# HTTP client (for taxonomy service + internal agent RPC)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TypeScript type generation
ts-rs = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex for AT URI parsing
regex = "1"

# Base64 for blob uploads
base64 = "0.22"

# AT Protocol OAuth + Agent
atrium-api = "0.25"
atrium-common = "0.1"
atrium-identity = "0.1"
atrium-oauth = "0.1"
hickory-resolver = "0.24"

# Async trait support (needed for Store implementations)
async-trait = "0.1"

# URL encoding
urlencoding = "2"

[[bin]]
name = "observing-appview"
path = "src/main.rs"
