[package]
name = "observing-appview"
version = "0.1.0"
edition = "2021"
description = "Unified REST API and web server for Observ.ing"
license = "AGPL-3.0-only"

[dependencies]
# Internal crates
observing-db = { path = "../observing-db", features = ["processing"] }
atproto-identity = { path = "../atproto-identity" }
nominatim-client = { path = "../nominatim-client" }
observing-lexicons = { path = "../observing-lexicons" }
at-uri-parser = { path = "../at-uri-parser" }

# AT Protocol types (for record construction)
jacquard-common = "0.9"

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower-http = { workspace = true, features = ["cors", "compression-full", "fs"] }
tower = { workspace = true }

# Database
sqlx = { workspace = true }

# HTTP client (for taxonomy service + internal agent RPC)
reqwest = { workspace = true, features = ["stream"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# TypeScript type generation
ts-rs = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Base64 for blob uploads
base64 = "0.22"

# AT Protocol OAuth + Agent
atrium-api = "0.25"
atrium-common = "0.1"
atrium-identity = "0.1"
atrium-oauth = "0.1"
hickory-resolver = "0.24"

# Async trait support (needed for Store implementations)
async-trait = "0.1"

# URL encoding
urlencoding = { workspace = true }

# Async combinators
futures = { workspace = true }

[[bin]]
name = "observing-appview"
path = "src/main.rs"
