[package]
name = "observing-bootstrap"
version = "0.1.0"
edition = "2021"
description = "Shared service-bootstrap helpers for observ.ing binaries"
license = "MIT OR Apache-2.0"

[features]
default = ["http"]
# HTTP service scaffolding (`serve`). Pulls axum.
http = ["dep:axum", "dep:tokio"]
# Postgres pool construction (`db` module): per-workload `PoolConfig` presets.
# Pulls sqlx + pg-url-env.
db = ["dep:sqlx", "dep:pg-url-env"]
# One-shot batch-job scaffolding (`job` module): shared CLI flags, a
# bounded-concurrency drive loop, and pool setup. Builds on `db`, adds clap/futures.
job = ["db", "dep:clap", "dep:futures"]

[dependencies]
tracing = { workspace = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"], optional = true }
pg-url-env = { path = "../pg-url-env", optional = true }
