[package]
name = "observing-db"
version = "0.1.0"
edition = "2021"
description = "Shared database layer for Observ.ing services"
license = "AGPL-3.0-only"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TypeScript type generation
ts-rs = { workspace = true }

# Logging
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
