[package]
name = "observing-db"
version = "0.1.0"
edition = "2021"
description = "Shared database layer for Observ.ing services"
license = "MIT OR Apache-2.0"

[features]
default = []
processing = ["observing-lexicons"]

[dependencies]
# Database
sqlx = { workspace = true, features = ["json", "migrate"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# TypeScript type generation
ts-rs = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Optional: AT Protocol lexicon types for record processing
observing-lexicons = { path = "../observing-lexicons", optional = true }

# Test-only: lexicon constraint validation in processing tests
[dev-dependencies]
jacquard-lexicon = "0.12.0-beta.2"
tokio = { workspace = true, features = ["rt", "macros"] }
