[package]
name = "observing-ingester"
version = "0.1.0"
edition = "2021"
description = "High-performance AT Protocol firehose ingester for Observ.ing"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Jetstream client
jetstream-client = { path = "../jetstream-client" }

# DID newtype
atproto-identity = { path = "../atproto-identity" }

# AT URI parsing (for resolving associatedMedia strong refs)
at-uri-parser = { path = "../at-uri-parser" }

# DID → PDS resolution (for fetching media records)
atproto-blob-resolver = { path = "../atproto-blob-resolver" }

# Database
sqlx = { workspace = true }
observing-db = { path = "../observing-db", features = ["processing"] }
observing-lexicons = { path = "../observing-lexicons" }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }

# Time
chrono = { workspace = true }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (for backfill)
reqwest = { workspace = true }

# AT Protocol repo primitives (CAR parsing for backfill).
# Pinned to a commit because list_collection_data is post-0.12.0-beta.2.
jacquard-repo = { git = "https://tangled.org/nonbinary.computer/jacquard.git", rev = "57f5b7abb4a30dd5c620eec9bc2ef2e3a19a2058" }
jacquard-common = { git = "https://tangled.org/nonbinary.computer/jacquard.git", rev = "57f5b7abb4a30dd5c620eec9bc2ef2e3a19a2058" }
serde_ipld_dagcbor = "0.6"

# URL parsing
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[[bin]]
name = "observing-ingester"
path = "src/main.rs"
