[package]
name = "observing-lexicons"
version = "0.1.0"
edition = "2021"
description = "Generated AT Protocol record types from lexicon schemas"
license = "MIT OR Apache-2.0"

[features]
default = ["bio_lexicons", "com_atproto", "ing_observ"]
bio_lexicons = ["com_atproto"]
com_atproto = []
ing_observ = ["com_atproto"]

[lints.rust]
non_snake_case = "allow"
unused_imports = "allow"

[lints.clippy]
all = "allow"

[dependencies]
jacquard-common = "0.12.0-beta.2"
jacquard-derive = "0.12.0-beta.2"
jacquard-lexicon = "0.12.0-beta.2"
rustversion = "1"
serde = { workspace = true }
