[package]
name = "observing-media-proxy"
version = "0.1.0"
edition = "2021"
description = "High-performance media caching proxy for Observ.ing"
license = "AGPL-3.0-only"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# AT Protocol blob resolution
atproto-blob-resolver = { path = "../atproto-blob-resolver" }

# File-based blob caching
file-blob-cache = { path = "../file-blob-cache" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-stackdriver = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[[bin]]
name = "observing-media-proxy"
path = "src/main.rs"
