[package]
name = "observing-media-proxy"
version = "0.1.0"
edition = "2021"
description = "High-performance media caching proxy for Observ.ing"
license = "AGPL-3.0-only"

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# AT Protocol blob resolution
atproto-blob-resolver = { path = "../atproto-blob-resolver" }

# File-based blob caching
file-blob-cache = { path = "../file-blob-cache" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }

# Time
chrono = { workspace = true }

# URL parsing
url = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
tempfile = { workspace = true }

[[bin]]
name = "observing-media-proxy"
path = "src/main.rs"
