[package]
name = "observing-migrate"
version = "0.1.0"
edition = "2021"
description = "One-shot binary that runs Observ.ing database migrations and exits"
license = "MIT OR Apache-2.0"

[dependencies]
observing-bootstrap = { path = "../observing-bootstrap", default-features = false, features = ["db"] }
observing-db = { path = "../observing-db" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }
